--- a/style.css
+++ b/style.css
@@ -19,8 +19,34 @@ body {
 
 .controls {
   margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.controls .controls__buttons {
+  margin-top: 30px;
+}
+
+.controls__buttons button {
+  all: unset;
+  cursor: pointer;
+  background-color: #fff;
+  padding: 5px 0;
+  width: 80px;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.8);
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.controls__buttons button:active {
+  transform: scale(0.98);
+}
 .controls .controls__colors {
   display: flex;
 }
@@ -31,4 +57,8 @@ body {
   border-radius: 25px;
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.controls__range {
+  margin-bottom: 30px;
 }
